--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                             padding: 10px 20px;
                             border-radius: 5px;
                             text-decoration: none;
-                            background: linear-gradient(92deg, #6366F1 0%, #42EEE4 100%);
-                            color: #000000;
+                            background: #6366F1;
+                            color: #ffffff;
                             font-weight: bold;
                         }
 
