Changes on 05/01/2024 Refactored previous code for freeGeneratorController.js & expirationController.js add unit tests add code coverage using nyc

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                             <h2>Welcome to MelodyMuse!</h2>
                         </div>
                         <p><strong>Thank you for your purchase!</strong></p>
-                        <p>We're thrilled to have you on board. Along with the pack you've acquired, you also get <b>free 1 Month access</b> to our tool for generating chords.</p>
+                        <p>We're thrilled to have you on board. Along with the pack you've acquired, you also get access to our tool for generating chords.</p>
                     
                         <div style="background-color: #02000f; padding: 15px; margin: 20px 0; border-radius: 8px;">
                             <h3>Your Credentials</h3>
